--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -8,8 +8,39 @@
 <body>
 <h1>My Super Fancy Spa</h1>
 <div id = "clientProfile">
+<!--Add an h2 that says “My profile”.
+Add a p tag and use th:text to bring in the value of name.
+Add a p tag and use th:text to bring in the value of skintype.
+Add a p tag and use th:text to bring in the value of manipedi.-->
+    <h2>My profile</h2>
+    <p th:text="${name}"></p>
+    <p th:text="${skintype}"></p>
+    <p th:text="${manipedi}"></p>
 </div>
 <div id = "servicesMenu">
+    <h2>Menu of Available Services</h2>
+    <h3>Facial Treatments</h3>
+    <p>The facial treatments below are recommended by our estheticians for your given skin type.</p>
+    <table>
+        <th:block th:each="appropriateFacial : ${appropriateFacials}">
+                <tr>
+                    <td th:text="${appropriateFacial}"></td>
+                </tr>
+        </th:block>
+    </table>
+    <th:block th:if="${manipedi} == 'manicure' or ${manipedi} == 'both'">
+        <h3>Manicure</h3>
+        <p th:replace="fragments :: manicureDescription"></p>
+    </th:block>
+    <th:block th:if="${manipedi} == 'pedicure' or ${manipedi} == 'both'">
+        <h3>Pedicure</h3>
+        <p th:replace="fragments :: pedicureDescription"></p>
+    </th:block>
 </div>
+<footer>
+    <div class="nail-polish-box red-polish"></div>
+    <div class="nail-polish-box green-polish"></div>
+    <div class="nail-polish-box blue-polish"></div>
+</footer>
 </body>
 </html>
